# LLM_app_huggingface

./: .gitignore  DEV_compose_api_volume.yaml  DEV_compose_api_watch.yaml  PROD_compose.yaml  README.md  api.code-workspace  compose.yaml  docker_container_start.sh  docker_image_build.sh  docker_image_push.sh  pyproject.toml  requirements.txt
.devcontainer/api-devcontainer/: devcontainer.json
.github/workflows/: build-and-test-docker.yml  build-and-test.yml  deploy-to-hf.yml  deploy-to-hf_v0.yml  deploy-to-hf_v1.yml  deploy.yml  main.yml  test-container.yml  test-container_v0.yml  test-container_v1.yml  test-container_v2.yml
RnD/: Dockerfile_v1  README.md  hf_hub_push_model.py  model.py  pyproject.toml  tokenisation_and_embedding.ipynb
RnD/Attention_Mechanism/: coding_attention_mechanism.ipynb  masked_attention.py  multihead_attention.py  self_attention.py
RnD/Dataloader/: dataloader.py
RnD/LLM_arch/GPT2/: GPT2_arch_config.json  GPT2_arch_config.yaml  feed_forward_layer.py  generate_text.py  llm_gpt2.py  transformer_block_gpt2.py
RnD/Tokenisation-Embedding/: dataloader.py
RnD/Tokenisation_Embedding/: Untitled.ipynb  dataloader.py  tokenisation_and_embedding.ipynb
RnD/Training_and_Evaluation/: llm_config.yaml  train.py  training.ipynb  training_parameters.yaml  utils.py
RnD/Training_and_Evaluation/mlflow/: mlflow_config.env  mlflow_tracking.py
RnD/Training_and_Evaluation/mlflow_pytorch/: README.md  mlflow_tracking.py  mlflow_tracking_extend_training.py  model_summary.txt  model_testing.py
RnD/Training_and_Evaluation/project_gutenberg/: llm_config.yaml  training_parameters.yaml  training_pytorch.py  training_pytorch_mlflow.py  utils.py
RnD/Training_and_Evaluation/pytorch/: README.md  train.py  training.ipynb  utils.py
api/: .dockerignore  Dockerfile  Dockerfile_prod  Dockerfile_v0  Dockerfile_v1  Dockerfile_v1-1  Makefile  README.md  app.env  app_config.env  main.py  pyproject.toml  test_model.py
shell_scripts/: docker_compose_up.sh  docker_container_start.sh  docker_image_build.sh  docker_image_push.sh
