[project]
name = "llmarch"
version = "0.0.1"
description = "Gradio app for the LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.25.0",
    "pytest>=8.3.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers==4.50.3",
]


[tool.uv.sources]
torch = [
    {index="pytorch-cpu-only"}
]

[[tool.uv.index]]
name = "pytorch-cpu-only"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "ruff>=0.9.6",
]

[build-system]
requires = ["setuptools==78.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["__init__.py","RnD.LLM_arch*", "RnD.Attention_Mechanism*"]
# DO NOT FORGET '*' after the directories
#exclude = ["RnD.Training_and_Evaluation*"]  # not required when include is specified
namespaces = false


#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[tool.hatch.build]
#where = ["."]
#include = ["RnD"]
#exclude = ["RnD/Training_and_Evaluation"]