[project]
name = "llmarch"
version = "0.0.1"
description = "Pytorch Module for the custom GPT2 architecture"
authors = [{name = "Sameer Kesava"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["setuptools==78.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["__init__.py","RnD.LLM_arch*", "RnD.Attention_Mechanism*"]
# DO NOT FORGET '*' after the directories
#exclude = ["RnD.Training_and_Evaluation*"]  # not required when include is specified
namespaces = false


#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[tool.hatch.build]
#where = ["."]
#include = ["RnD"]
#exclude = ["RnD/Training_and_Evaluation"]