[project]
name = "RnD"
version = "0.1.0"
description = "LLM model research and development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "mlflow>=2.21.2",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.7.0",
    "transformers>=4.50.3",
]


[tool.uv.sources]
torch = [
    {index="pytorch-cu118"}
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatchling>=1.27.0",
    "ipython>=9.0.2",
]
