[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "mlflow>=2.20.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "seaborn>=0.13.2",
    "tokenizers>=0.21.0",
    "tqdm>=4.67.1",
    "torch",
    "transformers>=4.50.1",
]

[tool.uv.sources]
torch = [
    {index="pytorch-cu118"}
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "jupyterlab>=4.3.5",
    "ruff>=0.9.6",
]
