[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend server for model inferencing"
authors = [{name = "Sameer Kesava"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.5",
    "llmarch",
    "matplotlib>=3.10.0",
    "mlflow==2.21.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "transformers==4.50.3",
]

[tool.uv.sources]
torch = [
    {index="pytorch-cu118"}
]
llmarch = { url = "https://raw.githubusercontent.com/sameervk/LLM_app_huggingface/main/dist/llmarch-0.0.1-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "jupyterlab>=4.3.5",
    "ruff>=0.9.6",
]
